--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,7 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Android Hello</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bottom_nav_favorites">Favorites</string>
     <string name="bottom_nav_movies">Movies</string>
 </resources>
