--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,7 +6,7 @@
     <string name="rewatch">Rewatch</string>
     <string name="Genre">\"Genre: \"</string>
     <string name="Date">\"Date: \"</string>
-    <string name="last_viewed">\"Last Viewed: \"</string>
+    <string name="last_viewed">"Last Viewed: "</string>
     <string name="mad_max_fury_road">Mad Max: Fury Road</string>
     <string name="add_movie">Add Movie</string>
     <string name="name">Name</string>
